--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,22 @@
 version: '3.7'
 
 services:
-  NOME-PROGETTO:
-    container_name: NOME-PROGETTO
-    restart: always
-    build:
-      context: .
-      dockerfile: src/NOME-PROGETTO/Dockerfile
+  sqlserver:
+    image: angelo87dock/gestionesagre-sqlserver:1.0
+    container_name: sqlserver
+    restart: "always"
+    environment:
+      - ACCEPT_EULA=Y
+      - MSSQL_SA_PASSWORD=CHANGE-ME
+      - MSSQL_PID=Express
+    volumes:
+      - /docker/storage-sqlserver/data:/var/opt/mssql/data
+    ports:
+      - 1433:1433
     networks:
       - lan-network
-
-networks:
-  lan-network:
-    external:
-      name: docker-net
+              
+  networks:
+    lan-network:
+      external:
+        name: docker-net
